WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
227838
[LFC][IFC] Negative padding values are invalid (inline box)
https://bugs.webkit.org/show_bug.cgi?id=227838
Summary
[LFC][IFC] Negative padding values are invalid (inline box)
alan
Reported
2021-07-09 06:47:21 PDT
by definition
Attachments
Patch
(3.66 KB, patch)
2021-07-09 06:52 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2021-07-09 06:52:39 PDT
Created
attachment 433213
[details]
Patch
EWS
Comment 2
2021-07-09 10:36:21 PDT
Committed
r279789
(
239556@main
): <
https://commits.webkit.org/239556@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 433213
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-07-09 10:37:21 PDT
<
rdar://problem/80383698
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug