[LFC][IFC] Negative padding values are invalid (inline box) https://bugs.webkit.org/show_bug.cgi?id=227838

Reviewed by Antti Koivisto.

Negative values for padding properties are invalid.
https://drafts.csswg.org/css-box/#padding-physical

* layout/integration/LayoutIntegrationCoverage.cpp:
(WebCore::LayoutIntegration::canUseForChild):


Canonical link: https://commits.webkit.org/239556@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279789 268f45cc-cd09-0410-ab3c-d52691b4dbfc